TodoList-go: Added swagger docs for my api
