# learn-go/todolist/api/cmd/main/main.go
@@ -16,6 +16,9 @@ import (
 // @description     A todo list API with user management
 // @host            localhost:8080
 // @BasePath        /
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 func main() {
 	db, err := storage.NewDatabase(
 		storage.DBConfig{
